# utils

./: etc.txt  workSummary.txt
Python/Python2SL/argparse/: argparse_conflict_handler_resolve.py
Python/Python2SL/subprocess/: check_output.py  check_output_error.py  check_output_error_trap_output.py  index.rst  os_system.py  popen2.py  popen3.py  popen4.py  popen_read.py  popen_write.py  shell_var.py
Python/Python2SL/threading/: threading_lock.py
Python/etc/GIL/: getrefcount.py  multi_threaded.py  multiprocess.py  single_threaded.py
bash/arithmetic/: expansion_example.sh  expr_example.sh  length_example.sh  let_example.sh
bash/functions/: argument_example.sh  function_example.sh  local_variable.sh  override.sh  return_hack.sh  return_status_example.sh
bash/if_statements/: boolean.sh  case.sh  disk_useage.sh  else.sh  if_elif.sh  nested_if.sh
bash/loops/: .for_loop_series.sh.swp  copy_check.sh  copy_files.sh  for_loop.sh  for_loop_series.sh  select_example.sh  while_loop.sh
bash/user_input/: cars.sh  intro.sh  login.sh  salesdata.txt  summary
bash/user_interface/: center_message.sh  flexible_data.sh
bash/variables/: script1.sh  script2.sh
cmake/usestudentlib/: CMakeLists.txt
config/: .bashrc  .vimrc2  bashrc_new  ctrace  makefile
gtest_samples/: CMakeLists.txt  README.md
pybind11_example/: .gitignore  README.md  example.cpp  pyproject.toml  setup.py  test_example.py
tips/: .vimrc
valgrind/: CMakeLists.txt  README.md  run.sh
valgrind/src/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
