cmake_minimum_required(VERSION 3.0)
project(gtest_sample)

set(CMAKE_CXX_FLAGS "-std=c++11 -g -Wall -Wextra -pthread")
cmake_policy(SET CMP0048 NEW)

find_package(PkgConfig)
pkg_search_module(GTEST REQUIRED gtest_main)

include_directories(include)

file(GLOB TESTS "unittest/*.cc")
foreach(test IN LISTS TESTS) 
	get_filename_component(filename ${test} NAME)
	string(REPLACE "." ";" temp ${filename})
	list(GET temp 0 target)
	set(SRC "")
	if( (${target} STREQUAL "sample1_unittest") OR (${target} STREQUAL "sample5_unittest"))
		set(SRC "src/sample1.cc")
	elseif (${target} STREQUAL "sample2_unittest")
		set(SRC "src/sample2.cc")
	elseif (${target} STREQUAL "sample4_unittest")
		set(SRC "src/sample4.cc")
	endif()
    add_executable(${target} ${test} ${SRC})
	target_link_libraries(${target} ${GTEST_LDFLAGS})
	target_compile_options(${target} PUBLIC ${GTEST_CFLAGS})
endforeach()
